Update files with new changes

--- a/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
+++ b/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Maximum Likelihood Estimator method"
+    "3. Maximum Likelihood Estimation method"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Likelihood of observing the sample with the both models"
+    "5. Likelihood of observing the sample with both models"
    ]
   },
   {
@@ -356,7 +356,7 @@
      "output_type": "stream",
      "text": [
       "32.2317937295614 33.4825953795284\n",
-      "39.3143208198782 44.1063860150036\n"
+      "39.0639945339702 43.7308965861416\n"
      ]
     }
    ],
@@ -364,8 +364,8 @@
     "AIC_2 = -2*log(L_2) + 2*2\n",
     "AIC_3 = -2*log(L_3) + 2*3\n",
     "\n",
-    "BIC_2 = -2*log(L_2) + log(255)*2\n",
-    "BIC_3 = -2*log(L_3) + log(255)*3\n",
+    "BIC_2 = -2*log(L_2) + log(225)*2\n",
+    "BIC_3 = -2*log(L_3) + log(225)*3\n",
     "\n",
     "print(AIC_2, AIC_3)\n",
     "print(BIC_2.n(), BIC_3.n())"
