Update files with new changes

--- a/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
+++ b/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
@@ -167,7 +167,7 @@
     "def gamma3(n,i, thh, mu1, mu2):\n",
     "    return binomial(n,i)*(thh*(mu1^(n-i)*(1-mu1)^i + (1-thh)*(1-mu2)^(n-i)*mu2^i))\n",
     "\n",
-    "\n",
+    "# We omit the constant log(225!/(43!105!10!41!26!)) of the logarithm of the likelihood function because it does not change the minimum, yet it complicates the expression and is unnecessary.\n",
     "def neg_log_likelihood2(params2):\n",
     "    th, mu = params2\n",
     "    log_lik = X[0][1]*log(gamma2(12,0,th,mu)) + X[1][1]*(sum(log(gamma2(12,i,th,mu)) for i in range(1,6))) + X[2][1]*log(gamma2(12,6,th,mu)) + X[3][1]*(sum(log(gamma2(12,i,th,mu)) for i in range(7,12))) + X[4][1]*log(gamma2(12,12,th,mu))\n",
