Update files with new changes

--- a/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
+++ b/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
@@ -310,7 +310,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.40532092823469e-7 1.07703604782109e-6\n"
+      "1.46504404761071e-66 7.78665647243216e-53\n"
      ]
     }
    ],
@@ -333,8 +333,9 @@
     "p33 = sum(gamma3(12,i, thh, mu1, mu2) for i in range(7,12))\n",
     "p43 = gamma3(12,12, thh, mu1, mu2)\n",
     "\n",
-    "L_2 = p0*p1*p2*p3*p4\n",
-    "L_3 = p03*p13*p23*p33*p43\n",
+    "C = factorial(N)/(factorial(X[0][1])*factorial(X[1][1])*factorial(X[2][1])*factorial(X[3][1])*factorial(X[4][1]))\n",
+    "L_2 = C*p0**X[0][1]*p1**X[1][1]*p0**X[2][1]*p0**X[3][1]*p0**X[4][1]\n",
+    "L_3 = C*p03**X[0][1]*p13**X[1][1]*p23**X[2][1]*p33**X[3][1]*p43**X[4][1]\n",
     "\n",
     "print(L_2, L_3)"
    ]
@@ -355,8 +356,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32.2317937295614 33.4825953795284\n",
-      "39.0639945339702 43.7308965861416\n"
+      "307.177461657923 245.969196737169\n",
+      "314.009662462332 256.217497943782\n"
      ]
     }
    ],
