--- a/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
+++ b/CODE3-Estimates_theta,mu,mu_1,mu_2_TFGM.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Declaring our sample (date)"
+    "1. Declaring our sample"
    ]
   },
   {
